--- a/client/frontend/src/Home.module.css
+++ b/client/frontend/src/Home.module.css
@@ -18,8 +18,21 @@ img {
     color: white;
 }
 
-.homeContainer {
+.main {
     margin-top: 2%;
+}
+
+.left-section{
+    background-color: #fff;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+    /* border: 3px solid #ff9933; */
+    padding: 2%;
+}
+
+@media only screen and (max-width: 1200px){
+    .left-section{
+        margin-bottom: 2%;
+    }
 }
 
 .category-section-label{
